--- a/Applications/RegistrationServer/appsettings.json
+++ b/Applications/RegistrationServer/appsettings.json
@@ -9,5 +9,6 @@
         "client": {
             "ConnectionString": "Server=localhost;Database=tracker_registration_dotnet_dev;Uid=tracker_dotnet;Pwd=password;"
         }
-    }
+    },
+    "REGISTRATION_SERVER_ENDPOINT" : "http://localhost:8883"
 }
