--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -7,6 +7,6 @@ applications:
   - route: allocations-pal.dev.cfapps.io
   path: Applications/AllocationsServer/bin/Release/netcoreapp2.1/publish
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal.dev.cfapps.io/
+    REGISTRATION_SERVER_ENDPOINT: http://registration.pal.dev.cfapps.io/
   services:
   - tracker-allocations-database
