--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -7,6 +7,6 @@ applications:
   - route: timesheets-pal.dev.cfapps.io
   path: Applications/TimesheetsServer/bin/Release/netcoreapp2.1/publish
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal.dev.cfapps.io/
+    REGISTRATION_SERVER_ENDPOINT: http://registration.pal.dev.cfapps.io/
   services:
   - tracker-timesheets-database
