--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -4,7 +4,7 @@ applications:
   instances: 1
   memory: 256M
   routes:
-  - route: allocations-pal.dev.cfapps.io
+  - route: allocations-pal-dev.cfapps.io
   path: Applications/AllocationsServer/bin/Release/netcoreapp2.1/publish
   env:
     REGISTRATION_SERVER_ENDPOINT: http://registration.pal.dev.cfapps.io/
